--- a/symfony-project/composer.json
+++ b/symfony-project/composer.json
@@ -22,7 +22,7 @@
   "repositories": [
     {
       "type": "path",
-      "url": "./doctrine-diagram-bundle",
+      "url": "../doctrine-diagram-bundle",
       "options": {
         "symlink": true
       }
